Have getMigrationScripts() sort files before returning them